# json-serialization

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-ci.yml
include/json/: json.h
src/: main.cpp
src/json/: json.cpp
